# project-helix-prompt-jobmatching-improvement

./: .gitignore  LICENSE  README.md  docker-compose.yml
src/api/: .dockerignore  Dockerfile  consume_admin_events.py  consume_multiline_events.py  consume_schedule_send.py  consume_user_events.py  main.py  pyproject.toml  start-services.sh
src/api/app/core/: authorization.py  config.py  constants.py  exception.py  logger.py
src/api/app/db/: postgres.py
src/api/app/models/: action_details.py  applicants.py  configs.py  conversations.py  documents.py  job_mandate_applicants.py  job_mandate_questions.py  job_mandates.py  list_actions.py  llm.py  recruiter_lists.py  requests.py  user_login.py  utils.py  whatsmeow_contacts.py
src/api/app/repositories/: action_details.py  applicants.py  config.py  conversations.py  documents.py  job_mandate_applicants.py  job_mandate_questions.py  job_mandates.py  list_actions.py  recruiter_lists.py  user_login.py  whatsmeow_contacts.py
src/api/app/schemas/: schemas.py
src/api/app/services/: applicants.py  audio_service.py  command_service.py  configs.py  conversations.py  documents.py  job_mandate_applicants.py  job_mandate_questions.py  job_mandates.py  (+9 more)
src/python/: .dockerignore  Dockerfile  clear_message_count.py  configs.py  constants.py  data_export.py  exceptions.py  main.py  migrate_applicants.py  models.py  my_logger.py  pyproject.toml  readme.md  redis_handler.py  schema.py
src/python/services/: __init__.py  audio_service.py  command_service.py  db_service.py  document_service.py  text_service.py  util_service.py
(+44 files in other folders)
